tests/sksl/errors/ReservedNameHvec2.glsl
### Compilation failed:

error: 1: 'hvec2' is a reserved word
1 error
